--- a/package.json
+++ b/package.json
@@ -9,5 +9,9 @@
     "handlebars": "^3.0.1",
     "hapi": "^8.2.0",
     "socket.io": "^1.3.4"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/ryanjadhav/node-chat.git"
+  },
 }
